# halftoning

./: .cproject  CMakeLists.txt  main.c  notes.txt
res/: ani_mod.vsh  ani_mod_depth.vsh  ball.glb  ball.mtl.txt  ball_trans.mtl.txt  blit.fsh  bush2.mtl.txt  bush2_leaves.glb  bush2_leaves_dec.glb  bush2_trunk.glb  bush2_trunk_dec.glb  bush3.mtl.txt  bush3_leaves.glb  bush3_leaves_dec.glb  bush3_trunk.glb  bush3_trunk_dec.glb  chunk.vsh  circle.fsh  crt.fsh  cube.mtl.txt  cube1.mtl.txt  cyl.dae  cyl.mtl.txt  cylinder.glb  cylinder.mtl.txt  dither.fsh  dof_dilate.fsh  frag.fsh  halftone.fsh  hana.mtl.txt  hash.glsl  imod.vsh  imod_depth.vsh  line.fsh  line.vsh  ls2v3.glsl  mod.fsh  mod.vsh  mod_depth.vsh  mod_light.fsh  (+21 more)
src/: ani.c  ani.h  app.c  app.h  arena.c  arena.h  arr.c  arr.h  avg.c  avg.h  body.c  body.h  box.c  box.h  chunk.c  chunk.h  dyn_arr.c  dyn_arr.h  err.h  font.c  font.h  game.c  game.h  gl.c  gl.h  gui.c  gui.h  hash.h  lmap.c  lmap.h  map.c  map.h  obj.c  obj.h  pal.h  reg.c  reg.h  stb_truetype.h  text.c  text.h  (+3 more)
src/lib/glad/: glad.c  glad.h
src/lib/glfw/: CMakeLists.txt
src/lib/glfw/include/GLFW/: glfw3.h
src/lib/glfw/src/: internal.h  posix_thread.h  win32_platform.h  win32_thread.c
